demos/session04/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8s-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: k8s.ingress.tech
    http:
      paths:
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: sample-svc
            port:
              number: 8080
      - path: /nginx
        pathType: Prefix
        backend:
          service:
            name: nginx-svc
            port:
              number: 8081
  - host: test.ingress.tech
    http:
      paths:
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: sample-svc
            port:
              number: 8080
      - path: /nginx
        pathType: Prefix
        backend:
          service:
            name: nginx-svc
            port:
              number: 8081
